objects/Contract.object
<CustomObject>
    <fields>
        <fullName>SBQQ__ActiveContract__c</fullName>
        <description>Determines if this contract is in effect.</description>
        <formula>IF(AND(ISPICKVAL(StatusCode,&apos;Activated&apos;), OR(AND(Not(SBQQ__Evergreen__c), EndDate &gt;= TODAY()), SBQQ__Evergreen__c)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Determines if this contract is in effect.</inlineHelpText>
        <label>Active Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentOpportunityRecordTypeId__c</fullName>
        <description>Record Type of the Amendment Opportunity, unless otherwise specified.</description>
        <inlineHelpText>Record Type of the Amendment Opportunity, unless otherwise specified.</inlineHelpText>
        <label>Amendment Opportunity Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentOpportunityStage__c</fullName>
        <description>The current stage of the Amendment Opportunity.</description>
        <inlineHelpText>The current stage of the Amendment Opportunity.</inlineHelpText>
        <label>Amendment Opportunity Stage</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of the original opportunity.</description>
        <inlineHelpText>Owner of the original opportunity.</inlineHelpText>
        <label>Amendment Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AmendmentContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentPricebookId__c</fullName>
        <description>Price Book Id of your Amendment.</description>
        <inlineHelpText>Price Book Id of your Amendment.</inlineHelpText>
        <label>Amendment Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentRenewalBehavior__c</fullName>
        <description>The basis for which a Renewal Start Date and Amendment End Date are calculated.</description>
        <inlineHelpText>The basis for which a Renewal Start Date and Amendment End Date are calculated.</inlineHelpText>
        <label>Amendment &amp; Renewal Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Latest End Date</fullName>
                    <default>true</default>
                    <label>Latest End Date</label>
                </value>
                <value>
                    <fullName>Earliest End Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__AmendmentStartDate__c</fullName>
        <description>Start Date of your Amendment. If blank, Amendment will start on today&apos;s date.</description>
        <inlineHelpText>Start Date of your Amendment. If blank, Amendment will start on today&apos;s date.</inlineHelpText>
        <label>Amendment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultRenewalContactRoles__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select to include contact roles from the original opportunity in the renewal opportunity.</description>
        <inlineHelpText>Select to include contact roles from the original opportunity in the renewal opportunity.</inlineHelpText>
        <label>Default Renewal Contact Roles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultRenewalPartners__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select to include the original opportunity partners in renewal opportunity.</description>
        <inlineHelpText>Select to include the original opportunity partners in renewal opportunity.</inlineHelpText>
        <label>Default Renewal Partners</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DisableAmendmentCoTerm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If unchecked, the Amendment Quote End Date will be set according to the Amendment &amp; Renewal Behavior setting. If checked, then no End Date will be set.</description>
        <inlineHelpText>If unchecked, the Amendment Quote End Date will be set according to the Amendment &amp; Renewal Behavior setting. If checked, then no End Date will be set.</inlineHelpText>
        <label>Disable Amendment Co-Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Evergreen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the contract is evergreen.</description>
        <inlineHelpText>Indicates whether the contract is evergreen.</inlineHelpText>
        <label>Evergreen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExpirationDate__c</fullName>
        <description>Contract end date for use in time-based workflows.</description>
        <formula>EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract end date for use in time-based workflows.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__MDQRenewalBehavior__c</fullName>
        <description>Defines how segmented subscription products will appear on renewal quotes. De-Segmented will renew as a standard quote line with the last segment’s data.</description>
        <inlineHelpText>Defines how segmented subscription products will appear on renewal quotes. De-Segmented will renew as a standard quote line with the last segment&apos;s data.</inlineHelpText>
        <label>MDQ Renewal Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>De-segmented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__MasterContract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to designate this contract as the master contract for this account. Upon renewal, all contracts will be rolled into this one.</description>
        <inlineHelpText>Select to designate this contract as the master contract for this account. Upon renewal, all contracts will be rolled into this one.</inlineHelpText>
        <label>Master Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OpportunityPricebookId__c</fullName>
        <description>Price Book ID of the related opportunity or quote.</description>
        <formula>IF(NOT(ISBLANK(SBQQ__Opportunity__c)), SBQQ__Opportunity__r.Pricebook2Id, SBQQ__Quote__r.SBQQ__PricebookId__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Price Book ID of the related opportunity or quote.</inlineHelpText>
        <label>Opportunity or Quote Price Book ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Opportunity from which this Contract was created.</description>
        <inlineHelpText>The Opportunity from which this Contract was created.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PreserveBundleStructureUponRenewals__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Select to maintain bundle hierarchy on renewal quotes.</description>
        <inlineHelpText>Select the checkbox to maintain bundle hierarchy on renewal quotes.</inlineHelpText>
        <label>Preserve Bundle Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote from which this Contract was created.</description>
        <inlineHelpText>Quote from which this Contract was created.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalForecast__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to trigger the generation of a renewal opportunity for forecasting purposes. Does not automatically generate a renewal quote.</description>
        <inlineHelpText>Select to trigger the generation of a renewal opportunity for forecasting purposes. Does not automatically generate a renewal quote.</inlineHelpText>
        <label>Renewal Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOpportunityRecordTypeId__c</fullName>
        <description>Record type of renewal opportunity if different from the default.</description>
        <inlineHelpText>Record type of renewal opportunity if different from the default.</inlineHelpText>
        <label>Renewal Opportunity Record Type Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOpportunityStage__c</fullName>
        <description>Override the default opportunity stage for this renewal. This must be done prior to selecting Renewal Forecast to take effect on the renewal opportunity.</description>
        <inlineHelpText>Override the default opportunity stage for this renewal. This must be done prior to selecting Renewal Forecast to take effect on the renewal opportunity.</inlineHelpText>
        <label>Renewal Opportunity Stage</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Renewal opportunity generated to track the renewal of this contract.</description>
        <inlineHelpText>Renewal opportunity generated to track the renewal of this contract.</inlineHelpText>
        <label>Renewal Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Renewal Contracts</relationshipLabel>
        <relationshipName>RenewedContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of the original opportunity.</description>
        <inlineHelpText>Owner of the original opportunity.</inlineHelpText>
        <label>Renewal Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RenewalContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalPricebookId__c</fullName>
        <description>Specify a price book ID to be used on Renewal Opportunities if you do not want to use the price book ID of the original opportunity.</description>
        <inlineHelpText>Specify a price book ID to be used on Renewal Opportunities if you do not want to use the price book ID of the original opportunity.</inlineHelpText>
        <label>Renewal Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalQuoted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this option to automatically generate a renewal quote on renewal opportunities.</description>
        <inlineHelpText>Select this option to automatically generate a renewal quote on renewal opportunities.</inlineHelpText>
        <label>Renewal Quoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalTerm__c</fullName>
        <description>Specify the term of the renewal. By default, it matches the original contract term.</description>
        <inlineHelpText>Specify the term of the renewal. By default, it matches the original contract term.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <inlineHelpText>Rate of renewal price increases.</inlineHelpText>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionQuantitiesCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to combine quantities of Subscriptions for the same product into one line on Renewal Quotes and Legacy Amendments.</description>
        <inlineHelpText>Select to combine quantities of Subscriptions for the same product into one line on Renewal Quotes and Amendments.</inlineHelpText>
        <label>Combine Subscription Quantities</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>